--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="aboutus.css">
     <link rel="stylesheet"  type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/246eb51e32.js"></script>
-    <title>Document</title>
+    <title>Palastenia</title>
 </head>
 <body>
   <header>
